5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1708_3068.log
== TEST (2019-04-29 14:13:10) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(b == "CIMITARRA"):
	print(2*S+2*D)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:29) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(b == 2*S+2*D):
	print("CIMITARRA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:48) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(arma == 2*S+2*D):
	print("CIMITARRA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:28) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(CIMITARRA == 2*S+2*D):
	print("CIMITARRA")
elif()
	
-- ERROR:
File "XXXX", line 7
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:17:00) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(CIMITARRA == 2*S+2*D):
	print("CIMITARRA")
elif(KATANA == 2*S+D):
	print("KATANA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:07) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(1 < S >= 20 == 2*S+2*D):
	print("CIMITARRA")
elif(KATANA == 2*S+D):
	print("KATANA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:54) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(S <= 20):
	print("CIMITARRA")
elif(KATANA == 2*S+D):
	print("KATANA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:05) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(S <= 20):
	print("CIMITARRA", 2*S+2*D)
elif(KATANA == 2*S+D):
	print("KATANA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:47:23) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(S <= 20):
	print("CIMITARRA", 2*S+2*D)
elif(S >=2 == 2*S+D):
	print("KATANA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:44) 
-- CODE:
S = float(input())
D = float(input())
c = float(input())

if(S <= 20):
	print("CIMITARRA", 2*S+2*D)
elif(S >=2):
	print("KATANA", 2*S+D)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:23) 
-- CODE:
S = float(input())
D = float(input())

if(S <= 20):
	print("CIMITARRA", 2*S+2*D)
elif(S >=2):
	print("KATANA", 2*S+D)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    S = float(input())
ValueError: could not convert string to float: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
